--- a/app_home/src/main/res/layout/fragment_drawer.xml
+++ b/app_home/src/main/res/layout/fragment_drawer.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                           xmlns:app="http://schemas.android.com/apk/res-auto"
-                                           android:id="@+id/drawer"
-                                           android:layout_width="match_parent"
-                                           android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:openDrawer="start"
+    >
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -69,85 +72,127 @@
                 android:layout_height="match_parent">
 
             <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_logo_splash"
-                    android:id="@+id/imageLogo"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginStart="27dp"
-                    android:layout_marginTop="24dp"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    android:layout_marginEnd="111dp"/>
-
-            <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="147dp"
-                    android:layout_height="156dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="40dp"
-                    android:layout_marginTop="41dp"
-                    app:layout_constraintTop_toBottomOf="@+id/imageLogo"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    android:id="@+id/linearLayout">
-
-                <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:textAppearance="@style/NavigationDrawerItems"
-                        style="@style/NavigationDrawerItems"
-                        android:text="@string/postcards_label"
-                        android:layout_weight="1"
-                        android:id="@+id/drawerActionPostcards"/>
-                <!--<Switch
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/historical_walk"
-                        android:layout_weight="1"
-                        android:textAppearance="@style/NavigationDrawerItems"
-                        android:id="@+id/drawerHistoricalWalk"
-                        style="@style/NavigationDrawerItems"/>-->
-                <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:textAppearance="@style/NavigationDrawerItems"
-                        style="@style/NavigationDrawerItems"
-                        android:text="@string/about_project"
-                        android:layout_weight="1"
-                        android:id="@+id/drawerActionAbout"/>
-
-                <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:textAppearance="@style/NavigationDrawerItems"
-                        style="@style/NavigationDrawerItems"
-                        android:text="@string/team"
-                        android:layout_weight="1"
-                        android:id="@+id/drawerActionTeam"/>
-            </LinearLayout>
+                android:id="@+id/imageLogo"
+                android:layout_width="162dp"
+                android:layout_height="90dp"
+                android:layout_marginStart="27dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="111dp"
+                android:src="@drawable/ic_logo_splash"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                />
 
             <TextView
-                    android:text="@string/language_eng"
-                    android:layout_width="@dimen/language_button_width"
-                    android:layout_height="@dimen/language_button_height"
-                    android:id="@+id/actionEng"
-                    android:layout_marginTop="101dp"
-                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="40dp"
-                    style="@style/LanguageButton"
-                    android:textAlignment="center"/>
+                android:id="@+id/drawerActionPostcards"
+                style="@style/NavigationDrawerItems"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="41dp"
+                android:text="@string/postcards_label"
+                android:textAppearance="@style/NavigationDrawerItems"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/imageLogo"
+                />
 
             <TextView
-                    android:text="@string/language_cro"
-                    android:layout_width="@dimen/language_button_width"
-                    android:layout_height="@dimen/language_button_height"
-                    android:id="@+id/actionCro"
-                    app:layout_constraintStart_toEndOf="@+id/actionEng"
-                    app:layout_constraintTop_toTopOf="@+id/actionEng"
-                    style="@style/LanguageButton"/>
+                android:id="@+id/drawerHistoricalWalkTv"
+                style="@style/NavigationDrawerItems"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:text="@string/historical_walk"
+                app:layout_constraintStart_toStartOf="@id/drawerActionPostcards"
+                app:layout_constraintTop_toBottomOf="@id/drawerActionPostcards"
+                />
+
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/drawerHistoricalWalkSw"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="44dp"
+                android:layout_marginEnd="32dp"
+                android:theme="@style/DrawerSwitch"
+                app:layout_constraintBottom_toBottomOf="@+id/drawerHistoricalWalkTv"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/drawerHistoricalWalkTv"
+                app:layout_constraintTop_toTopOf="@+id/drawerHistoricalWalkTv"
+                />
+
+            <TextView
+                android:id="@+id/drawerActionAbout"
+                style="@style/NavigationDrawerItems"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:text="@string/about_project"
+                android:textAppearance="@style/NavigationDrawerItems"
+                app:layout_constraintStart_toStartOf="@id/drawerHistoricalWalkTv"
+                app:layout_constraintTop_toBottomOf="@id/drawerHistoricalWalkTv"
+                />
+
+            <TextView
+                android:id="@+id/drawerActionTeam"
+                style="@style/NavigationDrawerItems"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:text="@string/team"
+                android:textAppearance="@style/NavigationDrawerItems"
+                app:layout_constraintStart_toStartOf="@id/drawerActionAbout"
+                app:layout_constraintTop_toBottomOf="@id/drawerActionAbout"
+                />
+
+            <TextView
+                android:id="@+id/actionEng"
+                style="@style/LanguageButton"
+                android:layout_width="@dimen/language_button_width"
+                android:layout_height="@dimen/language_button_height"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="110dp"
+                android:text="@string/language_eng"
+                android:textAlignment="center"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/drawerActionTeam"
+                />
+
+            <TextView
+                android:id="@+id/actionCro"
+                style="@style/LanguageButton"
+                android:layout_width="@dimen/language_button_width"
+                android:layout_height="@dimen/language_button_height"
+                android:text="@string/language_cro"
+                app:layout_constraintStart_toEndOf="@+id/actionEng"
+                app:layout_constraintTop_toTopOf="@+id/actionEng"
+                />
+
+            <TextView
+                android:id="@+id/drawerCredits"
+                style="@style/Credits"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="3dp"
+                android:text="@string/credits"
+                android:textColor="@android:color/white"
+                app:layout_constraintBottom_toTopOf="@+id/drawerCreditsLink"
+                app:layout_constraintStart_toStartOf="@+id/actionEng"
+                />
+
+            <TextView
+                android:id="@+id/drawerCreditsLink"
+                style="@style/Credits"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="33dp"
+                android:text="@string/credits_link"
+                android:textColor="@color/vivid_blue"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/drawerCredits"
+                />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.navigation.NavigationView>
