--- a/app_home/src/main/res/values/styles.xml
+++ b/app_home/src/main/res/values/styles.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="NavigationDrawerItems" parent="TextAppearance.MaterialComponents.Headline1">
+
+    <style name="NavigationDrawerItems" parent="TextAppearance.AppCompat.Caption">
         <item name="android:textSize">14sp</item>
         <item name="android:textAllCaps">true</item>
         <item name="android:fontFamily">@font/nexa_bold</item>
@@ -14,12 +15,6 @@
         <item name="android:textSize">12sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:gravity">center</item>
-    </style>
-    <style name="Toolbar" parent="ThemeOverlay.AppCompat.Light">
-        <item name="android:background">@color/light_gray</item>
-    </style>
-    <style name="AppBarLayout" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
-        <item name="android:popupElevation">0dp</item>
     </style>
 
     <style name="Location" parent="TextAppearance.MaterialComponents.Body1">
@@ -57,5 +52,15 @@
 
     <style name="MarkerLink" parent="ExpendableLabel">
 
+    </style>
+
+    <style name="DrawerSwitch">
+        <item name="trackTint">@color/switch_track_black_blue_50</item>
+        <item name="thumbTint">@color/switch_thumb_white_blue</item>
+    </style>
+
+    <style name="Credits" parent="TextAppearance.AppCompat.Caption">
+        <item name="android:fontFamily">@font/source_sans_pro_regular</item>
+        <item name="android:textSize">13sp</item>
     </style>
 </resources>
