--- a/app_home/src/main/res/layout/fragment_drawer.xml
+++ b/app_home/src/main/res/layout/fragment_drawer.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,66 +9,81 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        >
 
 
         <include
-                layout="@layout/fragment_drawer_content"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_constraintBottom_toTopOf="@id/bottomBar"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" android:layout_above="@id/bottomBar"/>
+            layout="@layout/fragment_drawer_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@id/bottomBar"
+            app:layout_constraintBottom_toTopOf="@id/bottomBar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
         <hr.factory.base_module.custom_view.Toolbar
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/toolbar_height"
-                android:id="@+id/toolbar"
-                app:navigation_icon="@drawable/ic_burger_blue"
-                android:background="@android:color/transparent" android:layout_alignParentTop="true"
-                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/toolbar_height"
+            android:layout_alignParentTop="true"
+            android:background="@android:color/transparent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="@dimen/status_bar_height"
+            app:navigation_icon="@drawable/ic_burger_blue"
+            />
 
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/bottombar_height"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:menu="@menu/bottom_bar_menu"
-                app:itemIconTint="@color/bottom_bar_color"
-                app:itemTextColor="@color/dark_navy"
-                app:itemTextAppearanceActive="@style/BottomBarItemTextAppearance"
-                app:itemTextAppearanceInactive="@style/BottomBarItemTextAppearance"
-                android:id="@+id/bottomBar" app:elevation="0dp"/>
+            android:id="@+id/bottomBar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/bottombar_height"
+            app:elevation="0dp"
+            app:itemIconTint="@color/bottom_bar_color"
+            app:itemTextAppearanceActive="@style/BottomBarItemTextAppearance"
+            app:itemTextAppearanceInactive="@style/BottomBarItemTextAppearance"
+            app:itemTextColor="@color/dark_navy"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:menu="@menu/bottom_bar_menu"
+            />
+
         <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:id="@+id/sendPostcard"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:src="@drawable/img_oval_mail"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:visibility="gone"
-                android:layout_marginBottom="30dp" android:layout_alignParentBottom="false"/>
+            android:id="@+id/sendPostcard"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_alignParentBottom="false"
+            android:layout_marginBottom="30dp"
+            android:src="@drawable/img_oval_mail"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.navigation.NavigationView
-            android:id="@+id/drawerNavigationView"
-            android:layout_width="@dimen/drawer_width"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:fitsSystemWindows="true"
-            android:backgroundTint="@color/dark_navy">
+        android:id="@+id/drawerNavigationView"
+        android:layout_width="@dimen/drawer_width"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:backgroundTint="@color/dark_navy"
+        android:fitsSystemWindows="true"
+        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/status_bar_height"
+            >
 
             <ImageView
                 android:id="@+id/imageLogo"
