--- a/app_home/src/main/res/layout/fragment_map.xml
+++ b/app_home/src/main/res/layout/fragment_map.xml
@@ -1,64 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clipToPadding="false"
-        android:clipChildren="false">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:clipChildren="false"
+    android:clipToPadding="false"
+    >
 
     <com.google.android.gms.maps.MapView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/mapsView"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="1.0"/>
+        android:id="@+id/mapsView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        />
 
     <LinearLayout
-            android:background="@drawable/white_rounded_background"
-            android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:background="@drawable/white_rounded_background"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        >
+
+        <TextView
+            android:id="@+id/textView2"
+            style="@style/SwitchLabel"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_height="match_parent"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="76dp"
-            app:layout_constraintTop_toTopOf="parent"
-            >
+            android:layout_weight="1"
+            android:text="@string/present_label"
+            />
+
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/historicalMap"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:checked="false"
+            android:theme="@style/MapSwitch"
+            />
 
         <TextView
-                android:text="@string/present_label"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/textView2"
-                android:layout_weight="1"
-                style="@style/SwitchLabel"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"/>
-
-        <Switch
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/historicalMap"
-                android:layout_gravity="start"
-                android:gravity="start|center_vertical"
-                android:checked="false"/>
-
-        <TextView
-                android:text="@string/historical_label"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/textView3"
-                android:layout_weight="1"
-                style="@style/SwitchLabel"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
+            android:id="@+id/textView3"
+            style="@style/SwitchLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:layout_weight="1"
+            android:text="@string/historical_label"
+            />
     </LinearLayout>
 
 
