--- a/base_module/src/main/res/values/dimens.xml
+++ b/base_module/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="toolbar_height">56dp</dimen>
     <dimen name="bottombar_height">60dp</dimen>
+    <dimen name="status_bar_height">24dp</dimen>
+    <dimen name="top_margin">80dp</dimen>
 </resources>
