--- a/app_home/src/main/res/values/styles.xml
+++ b/app_home/src/main/res/values/styles.xml
@@ -16,19 +16,18 @@
         <item name="android:gravity">center</item>
     </style>
 
-    <style name="Location" parent="TextAppearance.MaterialComponents.Body1">
+    <style name="Location" parent="TextAppearance.AppCompat.Caption">
         <item name="android:gravity">start</item>
+        <item name="android:textSize">14sp</item>
     </style>
 
     <style name="Location.Name" parent="Location">
-        <item name="android:textSize">14sp</item>
         <item name="android:fontFamily">@font/nexa_bold</item>
         <item name="android:textAllCaps">true</item>
         <item name="android:textColor">@color/dark_navy</item>
         <item name="android:textStyle">bold</item>
     </style>
     <style name="Location.Address" parent="Location">
-        <item name="android:textSize">14sp</item>
         <item name="android:fontFamily">@font/source_sans_pro_regular</item>
         <item name="android:textColor">@color/dark_gray</item>
         <item name="android:textAllCaps">false</item>
