--- a/app_home/src/main/res/layout/fragment_locations.xml
+++ b/app_home/src/main/res/layout/fragment_locations.xml
@@ -48,7 +48,7 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:listitem="@layout/item_location"
+        tools:listitem="@layout/item_location_home"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
