--- a/app_single_location/src/main/res/layout/item_post_card.xml
+++ b/app_single_location/src/main/res/layout/item_post_card.xml
@@ -4,7 +4,9 @@
     xmlns:tool="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_marginTop="21dp"
+    android:orientation="vertical"
+    >
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -17,27 +19,29 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tool:listitem="@layout/postcard_layout" />
+        tool:listitem="@layout/view_postcard"
+        />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/sendPostcard"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:background="@drawable/rounded_vivid_blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/postcardHolder">
+        app:layout_constraintTop_toBottomOf="@+id/postcardHolder"
+        >
 
         <TextView
             android:id="@+id/send"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="14dp"
+            android:layout_marginLeft="14dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/rounded_vivid_blue"
             android:fontFamily="@font/source_sans_pro_bold"
@@ -45,19 +49,24 @@
             android:text="@string/send_postcard"
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toEndOf="@+id/imgMailLogo"
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
         <ImageView
             android:id="@+id/imgMailLogo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="14dp"
+            android:layout_marginStart="92dp"
+            android:layout_marginLeft="92dp"
+            android:layout_marginEnd="209dp"
+            android:layout_marginRight="209dp"
             android:src="@drawable/ic_mail"
             app:layout_constraintBottom_toBottomOf="@+id/send"
-            app:layout_constraintEnd_toStartOf="@+id/send"
-            app:layout_constraintTop_toTopOf="@+id/send" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/send"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
