--- a/app_home/src/main/res/values/colors.xml
+++ b/app_home/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
 
     <color name="custom_black">#0B0B19</color>
     <color name="vivid_blue_50">#800069FF</color>
+    <color name="alto">#DADADA</color>
+
 </resources>
