--- a/app_single_location/src/main/res/layout/fragment_single_location.xml
+++ b/app_single_location/src/main/res/layout/fragment_single_location.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        xmlns:tools="http://schemas.android.com/tools">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
 
     <hr.factory.base_module.custom_view.Toolbar
-            android:layout_width="0dp"
-            android:layout_height="64dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/toolbarSingle"
-            app:share_visible="true">
-    </hr.factory.base_module.custom_view.Toolbar>
+        android:id="@+id/toolbarSingle"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/toolbar_height"
+        android:layout_marginTop="@dimen/status_bar_height"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:share_visible="true"
+        ></hr.factory.base_module.custom_view.Toolbar>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/locationContent"
