--- a/app_single_location/src/main/res/layout/item_galery.xml
+++ b/app_single_location/src/main/res/layout/item_galery.xml
@@ -4,23 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_marginTop="30dp"
+    android:orientation="vertical"
+    >
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:fontFamily="@font/source_sans_pro_regular"
+        android:fontFamily="@font/nexa_book"
+        android:textAllCaps="false"
         android:text="@string/check_gallery"
         android:textColor="@color/dark_navy"
-        android:textSize="24sp"
-        android:textStyle="bold"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,7 +36,8 @@
         android:showDividers="end"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/progressText">
+        app:layout_constraintTop_toBottomOf="@id/progressText"
+        >
 
         <ImageView
             android:id="@+id/imagePreview1"
@@ -42,35 +45,41 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:scaleType="centerCrop"
-            tools:srcCompat="@tools:sample/backgrounds/scenic[19]" />
+            tools:srcCompat="@tools:sample/backgrounds/scenic[19]"
+            />
 
         <Space
             android:layout_width="3dp"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            />
 
         <ImageView
             android:id="@+id/imagePreview2"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            tools:srcCompat="@tools:sample/avatars[3]" />
+            tools:srcCompat="@tools:sample/avatars[3]"
+            />
 
         <Space
             android:layout_width="3dp"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            />
 
         <RelativeLayout
             android:id="@+id/galleryShowMore"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            >
 
             <ImageView
 
                 android:id="@+id/imagePreview3"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:srcCompat="@tools:sample/backgrounds/scenic[1]" />
+                tools:srcCompat="@tools:sample/backgrounds/scenic[1]"
+                />
 
             <TextView
                 android:id="@+id/gallerySize"
@@ -89,7 +98,8 @@
                 android:gravity="center"
                 android:textColor="@android:color/white"
                 android:textSize="16sp"
-                tools:text="+5" />
+                tools:text="+5"
+                />
         </RelativeLayout>
     </LinearLayout>
 
