--- a/app_single_location/src/main/res/layout/item_location_single.xml
+++ b/app_single_location/src/main/res/layout/item_location_single.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
+    >
 
     <ImageView
         android:id="@+id/mapImage"
@@ -15,23 +17,24 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+        tools:srcCompat="@tools:sample/backgrounds/scenic"
+        />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
-        android:fontFamily="@font/source_sans_pro_regular"
+        android:fontFamily="@font/source_sans_pro_bold"
         android:text="@string/location_address_label"
         android:textAllCaps="true"
         android:textColor="@color/very_dark_gray"
-        android:textSize="16sp"
+        android:textSize="10sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/mapImage"
         app:layout_constraintStart_toStartOf="@+id/mapImage"
-        app:layout_constraintTop_toTopOf="@+id/mapImage" />
+        app:layout_constraintTop_toTopOf="@+id/mapImage"
+        />
 
     <TextView
         android:id="@+id/locationAddress"
@@ -39,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="5dp"
-        android:fontFamily="@font/source_sans_pro_regular"
+        android:fontFamily="@font/source_sans_pro_bold"
         android:text="TextView"
         android:textAlignment="center"
         android:textColor="@color/dark_navy"
@@ -47,14 +50,16 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/mapImage"
         app:layout_constraintStart_toStartOf="@+id/mapImage"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        />
 
     <TextView
         android:id="@+id/openLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="98dp"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginBottom="31dp"
         android:background="@drawable/rounded_vivid_blue"
         android:fontFamily="@font/source_sans_pro_bold"
@@ -68,5 +73,8 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/mapImage"
         app:layout_constraintEnd_toEndOf="@id/mapImage"
-        app:layout_constraintStart_toStartOf="@id/mapImage" />
+        app:layout_constraintStart_toStartOf="@id/mapImage"
+        app:layout_constraintTop_toBottomOf="@+id/locationAddress"
+        app:layout_constraintVertical_bias="0.0"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
