--- a/base_module/src/main/res/layout/toolbar.xml
+++ b/base_module/src/main/res/layout/toolbar.xml
@@ -1,45 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-       xmlns:app="http://schemas.android.com/apk/res-auto"
-       xmlns:tools="http://schemas.android.com/tools"
-       android:background="@android:color/transparent"
-       tools:context=".custom_view.Toolbar">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:layout_width="match_parent"
+    tools:layout_height="@dimen/toolbar_height"
+    android:background="@android:color/transparent"
+    tools:context=".custom_view.Toolbar"
+    >
 
     <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_burger_blue"
-            android:id="@+id/burgerMenu"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"/>
+        android:id="@+id/burgerMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_burger_blue"
+        />
 
     <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_toolbar_logo"
-            android:id="@+id/toolbarLogo"
-            android:layout_marginTop="11dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_bias="0.49"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/burgerMenu"
-            android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/toolbarMenu"
-            android:layout_marginEnd="8dp"/>
+        android:id="@+id/toolbarLogo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="21dp"
+        android:layout_marginEnd="22dp"
+        app:layout_constraintBottom_toBottomOf="@id/burgerMenu"
+        app:layout_constraintEnd_toStartOf="@+id/toolbarMenu"
+        app:layout_constraintStart_toEndOf="@+id/burgerMenu"
+        app:layout_constraintTop_toTopOf="@id/burgerMenu"
+        app:srcCompat="@drawable/ic_toolbar_logo"
+        />
 
     <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="18dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginEnd="19dp"
-            android:layout_marginBottom="18dp"
-            android:id="@+id/toolbarMenu"
-            android:src="@drawable/ic_share_blue"
-            android:visibility="invisible"/>
+        android:id="@+id/toolbarMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="19dp"
+        android:layout_marginBottom="18dp"
+        android:src="@drawable/ic_share_blue"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 </merge>
